add modified styles

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,6 @@
 .events {
   &__title {
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 1;
@@ -31,6 +31,7 @@
 
   &__event {
     @include page-grid;
+
     row-gap: 20px;
     align-items: center;
 
@@ -98,20 +99,10 @@
     gap: 15px;
     margin-block-start: 15px;
 
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 28px;
     line-height: 1;
     color: $heading-color;
-
-    &--image {
-      justify-content: center;
-      text-align: center;
-
-      @include on-tablet {
-        justify-content: start;
-        text-align: left;
-      }
-    }
 
     @include on-tablet {
       font-size: 36px;
@@ -121,9 +112,14 @@
     &::after {
       content: '';
       display: block;
-      height: 15px;
-      width: 15px;
+      height: 10px;
+      width: 10px;
       background-color: #f14a27;
+
+      @include on-tablet {
+        height: 15px;
+        width: 15px;
+      }
     }
 
     &--image {
@@ -143,6 +139,7 @@
 
   &__image-wrapper {
     @include page-grid;
+
     position: relative;
     margin-block-start: 60px;
 
