--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,7 +2,7 @@
   &__title {
     text-align: center;
     color: $heading-color;
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 36px;
     line-height: 1;
 
@@ -37,6 +37,7 @@
 
     @include on-desktop {
       @include page-grid;
+
       row-gap: 30px;
       padding-inline: $padding-inline-desktop;
     }
