--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -34,7 +34,7 @@
 
   &__title {
     text-align: center;
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 36px;
     font-weight: 700;
     color: #fff;
@@ -74,7 +74,7 @@
     flex-grow: 1;
 
     &::placeholder {
-      font-family: 'Montserrat', serif;
+      font-family: Montserrat, serif;
       color: $secondary-text-color;
       font-size: 14px;
       line-height: 1;
@@ -96,10 +96,10 @@
   }
 
   &::before {
-    inset: 0 0 0 0;
+    inset: 0;
     content: '';
     position: absolute;
     opacity: 0.75;
-    background-color: #000000;
+    background-color: #000;
   }
 }
