--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -23,7 +23,7 @@
   }
 
   &__logo {
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 1;
@@ -154,8 +154,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-block-start: 80px;
-    margin-block-end: 35px;
+    margin-block: 80px 35px;
 
     font-size: 12px;
     text-align: center;
