--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,7 @@
 
   @include on-tablet {
     @include page-grid;
+
     grid-template-rows: min-content;
 
     padding-inline-start: $padding-inline-tablet;
@@ -14,6 +15,7 @@
 
   &__image {
     display: block;
+    width: 100%;
     height: 300px;
 
     object-fit: cover;
@@ -50,7 +52,7 @@
     left: 50%;
     transform: translateX(-50%);
 
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-size: 30px;
     font-weight: 700;
     color: $heading-color;
@@ -87,7 +89,7 @@
 
   &__title {
     font-size: 45px;
-    font-family: 'Montserrat', serif;
+    font-family: Montserrat, serif;
     font-weight: 700;
     line-height: 1;
     color: #000;
@@ -132,7 +134,6 @@
     justify-content: center;
     align-items: center;
 
-    font-family: 'IBM Plex Sans';
     color: $heading-color;
     font-weight: 500;
     font-size: 16px;
@@ -184,18 +185,12 @@
     grid-column: 1 / -1;
 
     @include on-tablet {
-      margin-inline-end: 0;
-      margin-inline-start: auto;
+      margin-inline: auto 0;
       grid-column: 4 / -1;
     }
 
     @include on-desktop {
       grid-column: 6 / -1;
     }
-  }
-
-  &__image {
-    width: 100%;
-    display: block;
   }
 }
