--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -16,10 +16,7 @@
     &:has(.page__menu:target)::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      inset: 0;
       background: rgba(0, 0, 0, 0.5);
       z-index: 1000;
     }
