--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,13 +2,13 @@
 @import './utils/fonts';
 @import './utils/mixins';
 @import './utils/container';
-@import './blocks/page.scss';
-@import './blocks/icon.scss';
-@import './blocks/header.scss';
-@import './blocks/strong.scss';
-@import './blocks/menu.scss';
-@import './blocks/main.scss';
-@import './blocks/events.scss';
-@import './blocks/gallery.scss';
-@import './blocks/subscription.scss';
-@import './blocks/footer.scss';
+@import './blocks/page';
+@import './blocks/icon';
+@import './blocks/header';
+@import './blocks/strong';
+@import './blocks/menu';
+@import './blocks/main';
+@import './blocks/events';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
