add hover effects

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -44,6 +44,11 @@
     display: block;
     width: 100%;
     grid-column: 1 / -1;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.02);
+    }
 
     @include on-desktop {
       grid-column: 1 / 8;
