--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -50,6 +50,11 @@
     width: 87.5%;
     scroll-snap-align: center;
     object-fit: cover;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.02);
+    }
 
     @include on-tablet {
       height: 540px;
