--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -79,6 +79,13 @@
     margin-block-start: 20px;
   }
 
+  &__link {
+    display: block;
+
+    text-decoration: none;
+    color: $heading-color;
+  }
+
   &__up {
     width: 50px;
     height: 50px;
