--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -38,6 +38,7 @@
     @include on-desktop {
       @include page-grid;
 
+      overflow-x: unset;
       row-gap: 30px;
       padding-inline: $padding-inline-desktop;
     }
