--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$main-gray: #0f0e08;
+$main-green: #1a5a4c;
+$main-text-color: #4e4e4e;
+$secondary-text-color: #687480;
+$before-orange: #f14a27;
+$gallery-nav: #e0e0e0;
+$padding-inline-mobile: 20px;
+$padding-inline-tablet: 39px;
+$padding-inline-desktop: 55px;
