--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -69,6 +69,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 8px;
+    cursor: pointer;
+
+    @include hover(background-color, #d33f21);
 
     height: 50px !important;
     width: 50px !important;
