--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -61,6 +61,8 @@
     transition: all 0.3s;
     min-height: 210px;
 
+    @include hover(transform, scale(1.03));
+
     @include on-tablet {
       min-height: 520px;
     }
