add basic version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/contact-us';
+@import 'blocks/event-card';
+@import 'blocks/event-lecture';
+@import 'blocks/events';
+@import 'blocks/footer';
+@import 'blocks/gallery';
+@import 'blocks/header';
+@import 'blocks/main-content';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/page';
+@import 'blocks/schedule';
+@import 'blocks/subscription';
