--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$phone-min-width: 320px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$white-color: rgb(255, 255, 255, 1);
+$red-color: rgba(241, 74, 39, 1);
+$green-color: rgba(26, 90, 76, 1);
+$dark-font-color: rgba(15, 14, 8, 1);
+$medium-font-color: rgba(78, 78, 78, 1);
+$light-font-color: rgba(104, 116, 128, 1);
+$time-transform: 0.3s;
