--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -18,11 +18,12 @@
     padding: 0;
     font-size: 36px;
     line-height: 36px;
-    text-align: left;
+    text-align: center;
     color: $dark-font-color;
     margin-bottom: 40px;
 
     @include on-tablet {
+      text-align: left;
       font-size: 48px;
       line-height: 48px;
       margin-bottom: 48px;
@@ -62,21 +63,68 @@
   }
 
   &__images {
+    transition: transform 0.5s ease-in-out;
+    display: flex;
     justify-content: center;
     margin-inline: auto;
-    display: flex;
-    gap: 20px;
+
+    @include on-tablet {
+      gap: 20px;
+    }
 
     @include on-desktop {
       @include page-grid;
-
-      width: 1170px;
       row-gap: 30px;
     }
   }
 
-  &__image {
+  &__slider {
+    position: relative;
+    height: 439px;
+
+    @include on-tablet {
+      height: 584px;
+    }
+  }
+
+  &__switches {
+    position: absolute;
+    display: flex;
+    width: calc(100% - 40px);
     height: 410px;
+    left: 20px;
+
+    @include on-tablet {
+      height: 543px;
+      width: calc(100% - 68px);
+      left: 34px;
+    }
+
+    @include on-desktop {
+      display: none;
+    }
+  }
+
+  &__switch {
+    width: 50%;
+    height: 100%;
+
+    &--left {
+      left: 0;
+    }
+
+    &--right {
+      bottom: 0;
+      right: 0;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 410px;
+    object-fit: cover;
+    object-position: center;
+    overflow: hidden;
 
     @include on-tablet {
       height: 543px;
@@ -96,7 +144,10 @@
       }
     }
 
-    &-1 {
+    &-0 {
+      object-position: top;
+      display: none;
+
       @include on-desktop {
         display: block;
         height: 600px;
@@ -104,7 +155,7 @@
       }
     }
 
-    &-2 {
+    &-1 {
       display: none;
 
       @include on-desktop {
@@ -114,7 +165,7 @@
       }
     }
 
-    &-3 {
+    &-2 {
       display: none;
 
       @include on-desktop {
@@ -124,7 +175,7 @@
       }
     }
 
-    &-4 {
+    &-3 {
       display: none;
 
       @include on-desktop {
@@ -132,6 +183,14 @@
         height: 360px;
         grid-column: 9/13;
       }
+    }
+
+    &--active {
+      display: block;
+    }
+
+    &--notActive {
+      display: none;
     }
   }
 }
