--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,25 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desctop-min-width: 1280px;
+$transformation-duration: 0.5s;
+$logo-height: 61px;
+$logo-height-tablet: 72px;
+$heder-bg-img-height: 300px;
+$top-mobile-padding: 9px;
+$top-mobile-height: $heder-bg-img-height - $top-mobile-padding;
+$color-black: #0f0e08;
+$color-grey: #687480;
+$color-green: #1a5a4c;
+$color-green-shadow-light: #1a5a4c80;
+$color-green-shadow: #1a5a4c40;
+$color-orange: #f14a27;
+$button-height: 50px;
+$button-height-tablet: 70px;
+$button-border: 1px;
+$button-arrov-height: $button-height - $button-border * 2;
+$button-arrov-height-tablet: $button-height-tablet - $button-border * 2;
+$shift-lection: -63px;
+$shift-lection-tablet: -83px;
+$shift-lection-desctop: -102px;
+$margin-events: 100px + $shift-lection;
+$margin-events-tablet: 88px + $shift-lection-tablet;
+$margin-events-desctop: 200px + $shift-lection-desctop;
