add hover for events and cursor pointer for button

--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -45,6 +45,8 @@
     margin-bottom: 20px;
     object-fit: contain;
 
+    @include hover (transform, scale(1.1));
+
     @include on-tablet {
       margin-bottom: 40px;
       grid-column: 1 / -1;
