--- a/src/styles/blocks/_contucts.scss
+++ b/src/styles/blocks/_contucts.scss
@@ -74,7 +74,7 @@
     border: none;
     padding: 18px 0 18px 24px;
     font-family: Montserrat, sans-serif;
-    font-size: 14px;
+    line-height: 14px;
     text-align: left;
     color: $color-black;
 
@@ -114,6 +114,7 @@
     background-image: url(./../images/icons/arrow-black.svg);
     background-position: center;
     background-repeat: no-repeat;
+    cursor: pointer;
 
     @include hover(box-shadow, 5px 5px 10px $color-orange);
 
