add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -136,6 +136,7 @@
     }
   }
 
+
   &__description {
     font-family: $font-primary;
     font-size: 16px;
@@ -152,4 +153,33 @@
       font-size: 16px;
       line-height: 24px;
     }
+
+    h3.events__name {
+    font-family: $font-secondary;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #0F0E08;
+    padding: 2px;
+    margin: 0;
+
+    @include on-tablet {
+      font-size: 36px;
+      line-height: 36px;
+    }
+  }
+}
+
+.events__image events__image--sunset{
+position: relative;
+  width: 100%;
+  padding: 0;
+  margin-top: 60px;
+
+  @include on-tablet{
+    margin-top: 112px;
+  }
 }
