--- a/src/styles/entire.scss
+++ b/src/styles/entire.scss
@@ -2,7 +2,7 @@
 @import 'utils/mixins';
 @import 'utils/vars';
 @import 'fonts';
-@import 'blocks/classicism';
+@import 'blocks/class';
 @import 'blocks/contacts';
 @import 'blocks/events';
 @import 'blocks/footer';
