--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,4 +8,5 @@ $title-color: #0F0E08;
   $desktop-min-width: 1280px;
   $tablet-min-width: 640px;
   $mobile-min-width: 320px;
+  $green-color: #1a5a4c;
 
