--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,36 +1,118 @@
 .gallery {
   padding: 60px 20px;
+  position: relative;
 
-  &__title {
+  &__section-title {
     font-family: $font-secondary;
     font-size: 36px;
     font-weight: 700;
+    line-height: 36px;
     text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
     margin-bottom: 40px;
+
+    @include on-tablet {
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
   }
+
 
   &__slider {
     display: flex;
-    overflow-x: scroll;
+    overflow-x: auto;
     gap: 20px;
+
+    position: relative;
+     margin-bottom: 32px;
+
+    @include page-grid;
 
     &::-webkit-scrollbar {
       display: none;
     }
 
-    .gallery__image {
-      width: 300px;
-      height: 200px;
-      border-radius: 10px;
-      object-fit: cover;
-    }
-
-      &--desktop{
-      display: none;
+    @include on-tablet {
+      display: flex;
+      justify-content: space-between;
 
       @include on-desktop {
-        display: flex;
+        display: grid;
+        gap: 30px;
+      }
+    }
+  }
+
+  &__image {
+    display: flex;
+    height: auto;
+    width: 100%;
+    scroll-snap-align: center;
+
+
+    @include on-desktop {
+      display: grid;
+      grid-column: span 4;
+    }
+  }
+
+  &--normal{
+    display: none;
+
+    @include on-desktop{
+      display: grid;
+      grid-column: span 4;
+    }
+  }
+
+  &--tablet{
+    display: none;
+
+    @include on-tablet{
+    display: flex;
+    height: auto;
+    width: 100%;
+  }
+
+    @include on-desktop {
+      display: none;
+  }
+
+  &--wide {
+    display: none;
+
+    @include on-desktop {
+      display: grid;
+      grid-column: span 8;
+    }
+  }
+  }
+
+
+  .gallery__dots {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 16px;
+
+    @include on-desktop{
+      display: none;
+    }
+
+    &__dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: #E0E0E0;
+      border: 1px solid  #E0E0E0;
+      transition: background-color 0.3s ease;
+
+      &--active {
+        background-color: $green-color;
       }
     }
   }
 }
+
