--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,6 +1,6 @@
 
 body {
-  background: $c-gray;
+  background: #fff;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,6 +9,8 @@ body {
 
 
 .main__content {
+  margin-bottom: 120px;
+  
   @include content-padding-inline;
 }
 
