--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -30,6 +30,10 @@
       font-size: 48px;
       margin-top: 82px;
     }
+
+    @include on-desktop {
+      margin-top: 163px;
+    }
   }
 
   &__subtitle {
@@ -39,6 +43,10 @@
     text-align: center;
     font-weight: 400;
     color: white;
+
+    @include on-tablet {
+      margin-top: 16px;
+    }
   }
 
   &__tickets {
@@ -51,6 +59,10 @@
     @include on-tablet {
       height: 70px;
       gap: 16px;
+    }
+
+    @include on-desktop {
+      margin-top: 64px;
     }
 
     &-title {
