--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -10,6 +10,7 @@
     line-height: 36px;
     font-weight: 700;
     text-align: center;
+    margin-top: 70px;
 
     @include on-tablet {
       text-align: left;
