--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,11 +1,75 @@
 .menu {
+  @include content-padding-inline;
+
   width: 100%;
-  background-color:  #1a5a4c;
+  background-color: #1a5a4c;
   height: 400px;
+  gap: 28px;
+
+  &__nav {
+    display: flex;
+    margin-top: 27px;
+    gap: 28px;
+  }
+
+  &__nav-section {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    a {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 16px;
+      text-align: left;
+      text-underline-position: from-font;
+      text-decoration-skip-ink: none;
+      text-decoration: none;
+      color: white;
+    }
+  }
 
   &__close-icon {
     width: 24px;
     height: 24px;
-    margin-top: 27px;
+  }
+
+  hr{
+    margin-top: 24px;
+  }
+
+  &__info {
+    &-title {
+      margin-top: 24px;
+      font-weight: 400;
+      font-size: 14px;
+      color: white;
+    }
+
+    &-list {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      color: white;
+
+      li {
+        font-weight: 400;
+        font-size: 14px;
+      }
+
+      strong {
+        font-weight: 600;
+      }
+    }
+
+    &-footer {
+      text-align: left;
+      margin-top: 16px;
+      font-size: 14px;
+      line-height: 21px;
+      font-weight: 400;
+      color: white;
+    }
   }
 }
