--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/icon';
+@import './blocks/logo';
+@import './blocks/slider';
+@import './blocks/points';
+@import './blocks/top-bar';
+@import './blocks/header';
+@import './blocks/button';
+@import './blocks/input';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/events';
+@import './blocks/card';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
 
-body {
-  background: $c-gray;
-}
+
