--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,57 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+  color: #000;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 64.8px;
+    text-align: left;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86.4px;
+  }
+}
+
+%h2 {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  color: $main-dark;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: left;
+  }
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
+  margin: 0;
+  font-size: 28px;
+  line-height: 28px;
   font-weight: 400;
+  color: $main-dark;
+
+  @include on-tablet {
+  font-size: 36px;
+  line-height: 36px;
+  }
+}
+
+%h4 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 14px;
 }
