--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,60 @@
 @mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+  transition: #{$_property} $during;
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+
+@mixin content-padding-inline() {
+  padding-inline: $padding-content;
+
+  @include on-tablet {
+    padding-inline: $padding-content-tablet;
+  }
+
+  @include on-desktop {
+    max-width: $desktop-max-width;
+    margin-inline: auto;
+    padding-inline: $padding-content-desktop;
+  }
+}
+
+
+.container {
+  @include content-padding-inline;
+
+  &--right {
+    padding-left: calc( (100vw - $desktop-max-width) / 2 - $padding-content-desktop);
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 6;
+
+    column-gap: 30px;
+  }
+
+  @include on-desktop {
+    --columns: 12;
   }
 }
