--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,17 @@
 $c-gray: #eee;
+$main-orange: #F14A27;
+$main-green: #1A5A4C;
+$main-dark: #0F0E08;
+$main-gray: #687480;
+$main-dark-gray: #4E4E4E;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$desktop-max-width: 1170px;
+$phone-min-width: 320px;
+$padding-content: 20px;
+$padding-content-tablet: 39px;
+$padding-content-desktop: 55px;
+$during: 0.3s;
+
+
+
