--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,24 @@
 h1 {
   @extend %h1;
 }
+
+h2 {
+  @extend %h2;
+}
+
+h3 {
+  @extend %h3;
+}
+
+h4 {
+  @extend %h4;
+}
+
+a {
+  text-decoration: none;
+  color: $main-dark;
+}
+
+p {
+  margin: 0;
+}
