--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -6,6 +6,11 @@
   flex-direction: column;
   align-items: center;
   gap: 60px;
+  margin-top: 40px;
+
+  @include on-tablet {
+    margin-top: 48px;
+  }
 
   &-item {
     @include on-desktop {
