--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -1,6 +1,5 @@
 .gallery {
-  // display: none;
- padding-inline: 20px;
+  padding-inline: 20px;
 
   @include on-tablet {
     padding-inline: 34px;
@@ -13,6 +12,7 @@
     margin-inline: auto;
     padding-inline: 55px;
   }
+
   &__slider {
     @include on-desktop {
       display: none;
@@ -32,9 +32,18 @@
     }
   }
   &__title {
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 700;
+    margin-top: 100px;
+    text-align: center;
     margin-bottom: 40px;
 
     @include on-tablet {
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+      margin-top: 88px;
       margin-bottom: 48px;
     }
 
@@ -47,9 +56,8 @@
   &__img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
 
-    @include hover(transform, scale(1.05));
+    @include hover(transform, scale(1.1));
 
     &--column-4 {
       grid-column: span 4;
@@ -61,6 +69,7 @@
 }
 
 .slider {
+  overflow: visible !important;
   @include on-desktop {
     display: none;
   }
@@ -126,9 +135,9 @@
 
   &__buttons {
     display: flex;
+    justify-content: center;
     gap: 22px;
-    margin: 0 auto;
-    width: fit-content;
+    margin-top: 32px;
   }
 
   &__button {
@@ -139,10 +148,10 @@
     border: none;
     background-color: #e0e0e0;
 
-    @include hover(transform, scale(2));
+    @include hover(transform, scale(1.5));
 
     &--active {
-      background-color:green;
+      background-color: #1a5a4c;
     }
   }
 }
