--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -1,10 +1,13 @@
 .lection {
+  margin-top: 60px;
   @include on-tablet {
     padding-inline: 34px;
+    margin-top: 112px;
   }
 
   @include on-desktop {
     padding-inline: 0px;
+    margin-top: 104px;
   }
 
   grid-column: 1 / -1;
