--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'typography';
 @import '../styles/blocks/reset';
 @import '../styles/blocks/page';
+@import '../styles/blocks/icon';
 @import '../styles/blocks/nav';
 @import '../styles/blocks/hero';
 @import '../styles/blocks/menu';
@@ -12,4 +13,6 @@
 @import '../styles/blocks/galery';
 @import '../styles/blocks/slider';
 @import '../styles/blocks/subscription';
+@import '../styles/blocks/footer';
+
 
