--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -8,10 +8,11 @@
   height: 386px;
   z-index: -1;
   position: relative;
-  margin-bottom: 50px;
+  margin-top: 100px;
 
   @include on-tablet {
     height: 380px;
+    margin-top: 92px;
   }
 
   @include on-desktop {
@@ -19,6 +20,7 @@
   }
 
   &__title {
+    
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
