--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -34,12 +34,12 @@
   line-height: 30px;
   text-align: center;
   color: #0F0E08;
-  text-decoration: none;
+
   display: block;
+  white-space: pre;
 
   @include on-tablet {
     font-size: 36px;
     line-height: 36px;
   }
 }
-
