--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -2,8 +2,7 @@
 
   &__title {
 
-    @include content-padding-inline;
-    grid-column: 1 / -1;
+    // @include content-padding-inline;
     font-size: 36px;
     line-height: 36px;
     font-weight: 700;
@@ -17,7 +16,7 @@
     }
 
     @include on-desktop {
-      margin-left: 55px;
+      margin-left: 0px;
       margin-top: 200px;
     }
   }
