--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -44,4 +44,33 @@
       right: 0;
     }
   }
+  &__events--mark {
+    display: none;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    width: max-content;
+    color: #687480;
+
+    rotate: 270deg;
+
+    &::before {
+      content: '';
+      width: 70px;
+      height: 1px;
+      display: block;
+      text-align: center;
+
+      background-color: #1a5a4c;
+    }
+
+    @include on-desktop {
+      display: flex;
+      align-items: center;
+      column-gap: 7px;
+      left: 0;
+      top: 600px;
+      position: absolute;
+    }
+  }
 }
