--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,19 +11,20 @@
   }
 
   &__menu {
-
-    position: fixed;
-    top: 0;
-    right: 0;
+    position: absolute;
+    background-color: #1a5a4c;
+    width: 100%;
+    top: -100%;
     left: 0;
-    opacity: 0;
-    transition: all 0.3s;
-    transform: translateX(-100%);
     pointer-events: none;
+    opacity: 0;
+    z-index: 20;
+    padding-block: 27px;
+    transition: all 0.3s;
 
     &:target {
+      top: 0;
       opacity: 1;
-      transform: translateX(0);
       pointer-events: all;
     }
   }
