--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  @include content-padding-inline;
   padding-top: 50px;
   padding-bottom: 35px;
   width: 100%;
@@ -149,37 +150,4 @@
     }
   }
 
-  &__copyright {
-    grid-column: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    margin-top: 80px;
-    align-items: center;
-    gap: 10px;
-
-    @include on-tablet {
-      margin-top: 120px;
-      gap: 0;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-
-    @include on-desktop {
-      margin-top: 87px;
-    }
-
-
-    &--text {
-      font-size: 12px;
-      font-weight: 300;
-      line-height: 16.88px;
-      color:black;
-
-      &-1 {
-        @include on-tablet {
-          order: 1;
-        }
-      }
-    }
-  }
 }
