add hover to imgs

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -19,6 +19,7 @@
       align-items: center;
     }
     &-img {
+      @include hover(transform, scale(1.05));
       img {
         height: 210px;
         aspect-ratio: 16 / 9;
