--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,4 +1,5 @@
 .subscription {
+  @include content-padding-inline;
   display: flex;
   flex-direction: column;
   background-image: url('../images/subscription.png');
@@ -20,7 +21,6 @@
   }
 
   &__title {
-    
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
@@ -51,47 +51,130 @@
     }
   }
 
-  &__tickets {
+  &__form {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    margin-inline: 20px;
-    height: 50px;
+    width: 100%;
+    margin-top: 50px;
 
     @include on-tablet {
-      height: 70px;
-      gap: 16px;
+      margin-top: 64px;
+      column-gap: 16px;
     }
 
     @include on-desktop {
-      margin-top: 64px;
-    }
-
-    &-title {
-      background-color: #fff;
-      font-size: 14px;
-      text-align: left;
-      padding: 18px 160px 18px 24px;
-      color: #687480;
-
-      @include on-tablet {
-        padding: 28px 304px 28px 24px;
-      }
-    }
-
-    &-arrow {
-      background-color: #f14a27;
-      width: 50px;
-      height: 50px;
-      background-image: url('../images/icons/arrow-right.svg');
-      background-size: 30px 30px;
-      background-position: center;
-      background-repeat: no-repeat;
-
-      @include on-tablet {
-        height: 70px;
-        width: 70px;
-      }
+      column-gap: 30px;
     }
   }
+
+  &__input {
+    width: 230px;
+    height: 50px;
+    background-color: #fff;
+    font-family: Montserrat, serif;
+    font-size: 14px;
+    line-height: 100%;
+    padding: 18px 0 18px 24px;
+    color: #687480;
+
+    @include on-tablet {
+      height: 70px;
+      width: 374px;
+    }
+
+    @include on-desktop {
+      width: 470px;
+    }
+  }
+
+  &__btn {
+    height: 50px;
+    width: 50px;
+    background-color: #f14a27;
+    background-image: url('../images/icons/arrow-right.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include on-tablet {
+      height: 70px;
+      width: 70px;
+    }
+  }
+
+  // &__tickets {
+  //   display: flex;
+  //   justify-content: center;
+  //   margin-top: 20px;
+  //   margin-inline: 20px;
+  //   height: 50px;
+
+  //   @include on-tablet {
+  //     height: 70px;
+  //     gap: 16px;
+  //   }
+
+  //   @include on-desktop {
+  //     margin-top: 64px;
+  //   }
+
+  //   .subscribe__form {
+  //     grid-column: 1 / -1;
+  //     width: 100%;
+  //     display: flex;
+  //   }
+
+  //   @media (min-width: 640px) {
+  //     .subscribe__form {
+  //       grid-column: 2 / -2;
+  //       column-gap: 16px;
+  //     }
+  //   }
+
+  //   @media (min-width: 1280px) {
+  //     .subscribe__form {
+  //       grid-column: 4 / -4;
+  //       column-gap: 30px;
+  //     }
+  //   }
+
+  //   .subscribe__input {
+  //     color: #687480;
+  //     background-color: #fff;
+  //     width: calc(100% - 50px);
+  //     height: 50px;
+  //     padding: 18px 0 18px 24px;
+  //     font-family: Montserrat, serif;
+  //     font-size: 14px;
+  //     line-height: 100%;
+  //   }
+
+  //   @media (min-width: 640px) {
+  //     .subscribe__input {
+  //       width: calc(100% - 86px);
+  //       height: 70px;
+  //     }
+  //   }
+
+  //   @media (min-width: 1280px) {
+  //     .subscribe__input {
+  //       width: calc(100% - 100px);
+  //     }
+  //   }
+
+  //   .subscribe__button {
+  //     background-color: #f14a27;
+  //     background-image: url('../images/icons/arrow-right.svg');
+  //     background-position: center;
+  //     background-repeat: no-repeat;
+  //     width: 50px;
+  //     height: 50px;
+  //   }
+
+  //   @media (min-width: 640px) {
+  //     .subscribe__button {
+  //       width: 70px;
+  //       height: 70px;
+  //     }
+  //   }
+  // }
 }
