--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/footer';
+@import './blocks/icons';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/events';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/exhibitions';
+@import './blocks/exhibition';
+@import './blocks/main__content';
+@import './blocks/galary';
+@import './blocks/subscribe';
+@import './blocks/contacts';
