--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$orange-color: #f14a27;
+$black-color: #0f0e08;
+$green-color: #1a5a4c;
+$white-color: #fff;
+$grey-text-color: #4e4e4e;
+$light-grey-text-color: #687480;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$tablet-max-width: 768px;
+$desktop-max-width: 1280px;
+$effect-duration: 0.3s;
