--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,69 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 64.8px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86.4px;
+  }
+}
+
+%h2 {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+
+  @include on-desktop {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+%h3 {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 28px;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @include on-desktop {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+%h4 {
+  margin: 0;
+  font-family: 'IBM Plex Sans', serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+%h5 {
+  margin: 0;
+  font-family: 'IBM Plex Sans', serif;
+  font-size: 14px;
   font-weight: 400;
+  line-height: 21px;
 }
