--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
-$c-gray: #eee;
+// scren width
+
+$tablet: 640px;
+$small-desktop: 1280px;
+$large-desktop: 1440px;
+
+// colors
+
+$main-color: #1a5a4c;
+$main-color-orange: #f14a27;
+$main-color-orange-light: #f77c64;
+$white-color: #fff;
+
+// text colors
+
+$text-main-color: #0f0e08;
+$text-main-color-medium: #4e4e4e;
+$text-main-color-light: #687480;
