--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,43 @@
 h1 {
-  @extend %h1;
+  margin: 0;
+  color: $text-main-color;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    text-align: left;
+  }
+
+  @media (min-width: 768px) {
+    font-size: 54px;
+    line-height: 65px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86px;
+  }
+}
+
+h2 {
+  margin: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  color: $text-main-color;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+p {
+  margin: 0;
 }
