--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,79 @@
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
+
   &:hover {
     #{$_property}: $_toValue;
   }
+}
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin content-padding-inline() {
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
+}
+
+.container {
+  @include content-padding-inline;
+}
+
+@mixin font-ibm-plex-sans-light {
+  font-family: 'IBM Plex Sans', serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+@mixin font-ibm-plex-sans-regular {
+  font-family: 'IBM Plex Sans', serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@mixin font-ibm-plex-sans-medium {
+  font-family: 'IBM Plex Sans', serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+@mixin font-ibm-plex-sans-semibold {
+  font-family: 'IBM Plex Sans', serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+@mixin font-ibm-plex-sans-bold {
+  font-family: 'IBM Plex Sans', serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+@mixin font-montserrat-regular {
+  font-family: Montserrat, serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@mixin font-montserrat-bold {
+  font-family: Montserrat, serif;
+  font-weight: 700;
+  font-style: normal;
 }
