--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$effectDuration: 0.3s;
+$primary-green: #1A5A4C;
+$text-primary: #0F0E08;
+$text-secondary: #1d1d1d;
+$text-muted: #c2c2c2;
