--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,9 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/icon';
 
 body {
   background: $c-gray;
