added dropdown menu

--- a/styles/blocks/page.scss
+++ b/styles/blocks/page.scss
@@ -2,7 +2,8 @@
   &__body {
     margin: 0;
     min-width: 320px;
-    font-family: Raleway;
+    font-family: 'Montserrat', serif;
+    scroll-behavior: smooth;
   }
 
   &__header {
