--- a/styles/blocks/header.scss
+++ b/styles/blocks/header.scss
@@ -1,9 +1,195 @@
 .header {
-  row-gap: 20px;
+  row-gap: 20px; // ??? Why?
+
+  &__dropdown {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: -100%;
+    left: 0;
+    right: 0;
+    height: 400px;
+    background-color: #1a5a4c;
+    z-index: 10;
+    transition: top 0.3s ease-in-out;
+
+    gap: 24px;
+
+    @include on-tablet {
+      flex-direction: row;
+      justify-content: space-evenly;
+      gap: 38px;
+      height: 225px;
+    }
+
+    @include on-desktop {
+      gap: 102px;
+      height: 233px;
+    }
+
+    &--active {
+      top: 0;
+      z-index: 10;
+    }
+  }
+
+  &__dropdown-nav {
+    font-family:
+      IBM Plex Sans,
+      serif;
+    font-weight: 500;
+    color: #fff;
+    font-size: 16px;
+    line-height: 16px;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    padding-left: 72px;
+    padding-right: 20px;
+    margin-top: 27px;
+    gap: 28px;
+
+    @include on-tablet {
+      // padding-left: 0;
+      // padding-left: 96px;
+      margin-top: 40px;
+      gap: 20px;
+    }
+
+    @include on-desktop {
+      // padding-left: 182px;
+      gap: 31px;
+    }
+  }
+
+  &__dropdown-nav-group {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 0;
+
+    @include on-desktop {
+      gap: 30px;
+    }
+  }
+
+  &__dropdown-nav-item {
+    list-style: none;
+    white-space: nowrap;
+
+    @include on-desktop {
+      font-size: 22px;
+      line-height: 22px;
+    }
+  }
+
+  &__dropdown-nav-link {
+    text-decoration: none;
+    color: inherit;
+    font-family:
+      IBM Plex Sans,
+      serif;
+  }
+
+  &__dropdown-nav-link-group {
+    display: block;
+    list-style: none;
+  }
+
+  &__dropdown-divider {
+    all: unset;
+    margin-inline: 20px;
+    height: 1px;
+    background-color: #fff;
+    opacity: 0.5;
+
+    @include on-tablet {
+      height: auto;
+      width: 1px;
+      background-color: #fff;
+      opacity: 0.5;
+      margin-inline: 0;
+      margin-block: 40px;
+    }
+  }
+
+  &__dropdown-schedule {
+    @include content-padding-inline;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @include on-tablet {
+      padding-left: 0;
+      padding-right: 35px;
+      margin-top: 40px;
+    }
+  }
+
+  &__dropdown-schedule-title {
+    margin: 0;
+    font-family:
+      IBM Plex Sans,
+      serif;
+    font-weight: 500;
+    color: #fff;
+  }
+
+  &__dropdown-schedule-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    color: #fff;
+
+    font-family:
+      IBM Plex Sans,
+      serif;
+
+    @include on-tablet {
+      flex-direction: row;
+      gap: 26px;
+    }
+  }
+
+  &__dropdown-schedule-list {
+    margin: 0;
+    padding: 0;
+
+    @include on-tablet {
+      // white-space: no-wrap;
+      // min-width: 144px;
+    }
+  }
+
+  &__dropdown-schedule-item {
+    list-style: none;
+    font-size: 14px;
+
+    @include on-tablet {
+      white-space: nowrap;
+      // min-width: 144px;
+    }
+  }
+
+  &__dropdown-schedule-details {
+    font-size: 14px;
+    @include on-tablet {
+      max-width: 155px;
+    }
+  }
+
+  &__dropdown-schedule-weekends {
+    color: #fff;
+    font-family:
+      IBM Plex Sans,
+      serif;
+    margin: 0;
+  }
 
   &__container {
     display: grid;
     row-gap: 20px;
+
     @include on-tablet {
       @include page-grid;
       height: 100vh;
@@ -25,7 +211,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    min-height: 286px; //temp for mobile
+    min-height: 286px; // temp for mobile
 
     @include on-tablet {
       grid-column: 4 / -1;
@@ -57,7 +243,7 @@
     @include on-desktop {
       right: -55px;
     }
-    z-index: -1; // Щоб він був позаду контенту
+    z-index: -1;
   }
 
   &__logo-link {
@@ -145,6 +331,9 @@
   }
 
   &__tickets-button {
+    font-family:
+      IBM Plex Sans,
+      serif;
     position: relative;
     display: flex;
     align-items: center;
@@ -209,6 +398,7 @@
     }
 
     &--text {
+      font-family: 'IBM Plex Sans', serif;
       margin: 0 0 0 20px;
       text-transform: uppercase;
       color: #687480;
