--- a/styles/blocks/icon.scss
+++ b/styles/blocks/icon.scss
@@ -7,11 +7,32 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  &--dropdown {
+  &--dropdown-open {
     position: absolute;
     top: 33px;
     left: 23px;
+    z-index: 2;
+    @include on-tablet {
+      top: 39px;
+      left: 34px;
+    }
 
+    @include on-desktop {
+      left: 55px;
+    }
+  }
+
+  &--dropdown-close {
+    display: none;
+    position: absolute;
+    background-image: url(../icons/dropdown-icon-close.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    top: 33px;
+    left: 23px;
+    z-index: 3;
     @include on-tablet {
       top: 39px;
       left: 34px;
