desktop and tablet resolutions

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,21 @@
-$c-gray: #eee;
+// utility
+$utilityColor: #1a5a4c;
+$transparentUtilityColor: rgba(26, 90, 76, 0.5);
+$utilityColorSecondary: #c8d5d2;
+$warningColor: #f14a27;
+
+// breadcrumbs
+$paginationColor: #e0e0e0;
+$bgColor: #eee;
+$transparentOverlayColor: rgba(0, 0, 0, 0.5);
+$transparentBorderColor: rgba(255, 255, 255, 0.5);
+
+// fonts
+$mainFont: #0f0e08;
+$secondFont: #fff;
+$utilityText: #687480;
+$descriptionText: #4e4e4e;
+$fzS: 14px;
+$fzM: 16px;
+$fzL: 18px;
+$fzExtra: 36px;
