minor improvement (header link changed)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -458,6 +458,11 @@ input {
     left: 20px;
     width: 30px;
     height: 30px;
+
+    @media screen and (min-width: 1280px) {
+      top: 39px;
+      left: 55px;
+    }
   }
 
   &__logo {
@@ -518,6 +523,16 @@ input {
 
 .events {
   margin-top: 70px;
+
+  > h2 {
+    margin-bottom: 38px;
+  }
+
+  @media screen and (min-width: 768px) {
+    > h2 {
+      padding-left: 34px;
+    }
+  }
 
   @media screen and (min-width: 1280px) {
     > h2 {
